plugins {
    id 'java-library'
    id 'maven-publish'
}

ext {
    JNLuaVersion = '1.0.0'
}

apply from: "$rootDir/gradle/common.gradle"


repositories {
	mavenCentral()
}

sourceCompatibility = 1.8
targetCompatibility = 1.8

dependencies {
	testImplementation 'junit:junit:4.13.1'
}

version = '0.1.0-SNAPSHOT'
group = 'org.terasology.jnlua'

tasks.withType(Test) {
	systemProperty "java.library.path", "natives"
    ignoreFailures = true
}

task sourceJar(type: Jar) {
    description = "Create a JAR with all sources"
    from sourceSets.main.allSource
    from sourceSets.test.allSource
    classifier = 'sources'
}

task javadocJar(type: Jar, dependsOn: javadoc) {
    description = "Create a JAR with the JavaDoc for the java sources"
    from javadoc.destinationDir
    classifier = 'javadoc'
}

javadoc {
    failOnError = false
}
